[package]
name = "iron-cors"
version = "0.6.0-rc.1"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
repository = "https://github.com/dbrgn/iron-cors-rs/"
homepage = "https://github.com/dbrgn/iron-cors-rs/"
documentation = "https://docs.rs/iron-cors/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A CORS middleware implementation for Iron."

[dependencies]
log = "0.3"
iron = "0.6"

[dev-dependencies]
iron-test = {git="https://github.com/ernestas-poskus/iron-test", branch="features/bump_crates"}
unicase = "1.4.0"
